--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -14,10 +14,10 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="assets/logo.png" alt="VoteSecure Logo">
-                    <h1>VoteSecure Admin</h1>
+                    <h1>VoteSecure</h1>
                 </div>
                 <div class="user-info">
-                    <span id="adminName">Welcome, Admin</span>
+                    <span>Admin Dashboard</span>
                     <button class="btn btn-outline" onclick="handleLogout()">Logout</button>
                 </div>
             </div>
@@ -26,22 +26,16 @@
         <main class="admin-main">
             <div class="admin-container">
                 <div class="admin-grid">
-                    <!-- Session Control Card -->
                     <div class="admin-card">
-                        <h3><i class="fas fa-clock"></i> Session Control</h3>
+                        <h3>Session Control</h3>
                         <div class="session-controls">
-                            <button class="btn btn-primary" onclick="startSession()">
-                                <i class="fas fa-play"></i> Start New Session
-                            </button>
-                            <button class="btn btn-danger" onclick="endSession()">
-                                <i class="fas fa-stop"></i> End Current Session
-                            </button>
+                            <button class="btn btn-primary" onclick="startSession()">Start New Session</button>
+                            <button class="btn btn-danger" onclick="endSession()">End Current Session</button>
                         </div>
                     </div>
 
-                    <!-- Add Party Card -->
                     <div class="admin-card">
-                        <h3><i class="fas fa-plus-circle"></i> Add New Party</h3>
+                        <h3>Add New Party</h3>
                         <form id="addPartyForm" class="add-party-form">
                             <div class="input-group">
                                 <input type="text" id="partyName" required>
@@ -59,23 +53,19 @@
                                 <input type="file" id="partyLogo" accept="image/*" required>
                                 <label>Party Logo</label>
                             </div>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-plus"></i> Add Party
-                            </button>
+                            <button type="submit" class="btn btn-primary">Add Party</button>
                         </form>
                     </div>
 
-                    <!-- Voting Statistics Card -->
                     <div class="admin-card">
-                        <h3><i class="fas fa-chart-bar"></i> Voting Statistics</h3>
+                        <h3>Voting Statistics</h3>
                         <div class="voting-stats" id="votingStats">
                             <!-- Stats will be dynamically loaded -->
                         </div>
                     </div>
 
-                    <!-- Party List Card -->
                     <div class="admin-card">
-                        <h3><i class="fas fa-list"></i> Party List</h3>
+                        <h3>Party List</h3>
                         <div class="party-list" id="partyList">
                             <!-- Party list will be dynamically loaded -->
                         </div>
